# imagined-handwriting

./: .flake8  .gitignore  Makefile  README.md  SECURITY.md  finetune.py  imagined_handwriting.ipynb  pretrain.py  pyproject.toml  run_full_experiment.py  update_bigram.py
.github/workflows/: lint.yml  tests.yml
assets/: willett_2c_approx_cer.csv
imagined_handwriting/: config.py  settings.py  train_utils.py
imagined_handwriting/data/: __init__.py  core.py  download.py  handwriting.py  io.py  preprocess.py  raw.py  snippets.py
imagined_handwriting/datasets/: __init__.py  data_module.py  handwriting.py  utils.py
imagined_handwriting/inference/: __init__.py  beam_search.py  beam_search_2.py  sliding_window_decoder.py
imagined_handwriting/metrics/: __init__.py  loss.py  misc.py  text.py
imagined_handwriting/models/: __init__.py  lightning_model.py  transformer.py
imagined_handwriting/nn/: __init__.py  classifier.py  dimension_dropout.py  embedding.py  fnet.py  positional_encoding.py  resample.py  utils.py
imagined_handwriting/transforms/: __init__.py  _bin.py  _channel.py  _crop.py  _end_of_sentence.py  _mask.py  _noise.py  _normalize.py  _one_hot.py  _pad.py  _scale.py  _smooth.py  _timewarp.py
tests/: conftest.py  make_test_data.py
tests/imagined_handwriting/data/: test_io.py  test_raw.py
tests/imagined_handwriting/datasets/: test_utils.py
tests/imagined_handwriting/inference/: test_sliding_window_decoder.py
tests/imagined_handwriting/metrics/: test_loss.py  test_misc.py  test_text.py
tests/imagined_handwriting/models/: test_transformer.py
(+22 files in other folders)
