[tool.poetry]
name = "imagined-handwriting"
version = "0.1.0"
description = "An alternative implementation for an imagined handwriting decoder"
authors = ["AE Studio <bci@ae.studio>"]
maintainers = ["AE Studio <bci@ae.studio>"]
readme = "README.md"
packages = [{include = "imagined_handwriting"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/agencyenterprise/imagined-handwriting"
"Documentation" = "https://agencyenterprise.github.io/imagined-handwriting/"
"Bug Tracker" = "https://github.com/agencyenterprise/imagined-handwriting/issues"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
torchvision = "^0.13.1"
numpy = "^1.23.3"
scipy = "^1.9.2"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
pytorch-lightning = "^1.7.7"
pydantic = "^1.10.2"
mlflow = "^1.29.0"
pygtrie = "^2.5.0"
kenlm = "^0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^5.0.4"
pytest = "^7.1.3"


[tool.mypy]
ignore_missing_imports = "True"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
